--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -37,7 +37,7 @@
       </ul>
 
       <ul>
-        <h4>Een project van:</h4>
+        <h4>Een project van</h4>
         <li><a href="https://www.rijksoverheid.nl/">Rijksoverheid</a></li>
         <li>Ministerie van Binnenlandse Zaken en Koninkrijksrelaties</li>
         <li><a href="https://digilab.overheid.nl/">Digilab</a></li>
@@ -46,7 +46,8 @@
       </ul>
 
       <ul>
-        <h4>Waar en hoe we werken:</h4>
+        <h4>Meer informatie</h4>
+        <li><a href="mailto:opensource@minbzk.nl">Email: opensource@minbzk.nl</a></li>
         <li><a href="https://github.com/MinBZK/mijn-bureau">Code en documentatie</a></li>
         <li><a href="https://github.com/orgs/MinBZK/projects/22/views/1">Project tracker</a></li>
       </ul>
